add more recipe pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>The Odin Recipe</title>
 </head>
 <body>
-   <h1>Odin Recipes</h1>
-   <a href="recipes/jollof-rice.html">Jollof rice</a>
+    <h1>Odin Recipes</h1>
+    <ol>
+        <li><a href="recipes/jollof-rice.html">Jollof Rice</a></li>
+        <li><a href="recipes/ogbono-soup.html">Ogbono Soup</a></li>
+    </ol>
+   
 </body>
 </html>
