add 1 more recipe page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ol>
         <li><a href="recipes/jollof-rice.html">Jollof Rice</a></li>
         <li><a href="recipes/ogbono-soup.html">Ogbono Soup</a></li>
+        <li><a href="recipes/fried-rice.html">Fried Rice</a></li>
     </ol>
    
 </body>
