add fried rice recipe images

--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -6,7 +6,7 @@
     <title>fried rice</title>
 </head>
 <body>
-    <img src="fried_rice.webp">
+    <img src="fried_rice.png">
     <h1>How to Make Fried Rice + 5 Easy Fried Rice Recipes</h1>
     <p>You don’t have to wait until the family wants to order takeout to enjoy a heaping bowl of fried rice. Offering maximum flavor with minimal fuss, fried rice is surprisingly simple to whip up, a great way to use up leftovers and, best of all, comes together in a single pan. Read on for cooking tips, watch an easy-to-follow video and then test your skills with some of our best fried rice recipes for beginners and experts alike.</p>
     <h2>What are the Ingredients in Fried Rice?</h2>
